--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-.vscode/settings.json
-.claude/settings.local.json
-Day 1/__pycache__/util.cpython-313.pyc
-Day1/__pycache__/util.cpython-313.pyc
+*/__pycache__/*
+*.pyc
+.env
+.conda/
+.claude/
+.vscode/
